--- a/src/utils/styles/base/_normalize.scss
+++ b/src/utils/styles/base/_normalize.scss
@@ -1,33 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght,YOPQ@100..900,40..300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
 
-$yellow-shade-55: #FFD11A;
-$yellow-shade-60: #FFD633;
-$yellow-shade-70: #FFE066;
-$yellow-shade-80: #FFEB99;
-$yellow-shade-90: #FFF5CC;
-$yellow-shade-95: #FFFAE5;
-$yellow-shade-97: #FFFCF0;
-$yellow-shade-99: #FBFBFE;
-
-$dark-shade-08: #141414;
-$dark-shade-10: #1A1A1A;
-$dark-shade-15: #262626;
-$dark-shade-20: #333333;
-$dark-shade-25: #404040;
-$dark-shade-30: #4D4D4D;
-$dark-shade-35: #595959;
-$dark-shade-40: #666666;
-
-$grey-shade-50: #7E7E81;
-$grey-shade-60: #98989A;
-$grey-shade-70: #B3B3B3;
-$grey-shade-80: #CCCCCC;
-$grey-shade-90: #E4E4E7;
-$grey-shade-95: #F1F1F3;
-$grey-shade-97: #F7F7F8;
-$grey-shade-99: #FCFCFD;
-
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -43,9 +16,16 @@ menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
   margin: 0;
   padding: 0;
-  border: 0;
+  border: none;
   font-size: 100%;
   vertical-align: baseline;
+  text-decoration: none;
+  box-sizing: border-box;
+}
+
+button {
+  all: unset;
+  cursor: pointer;
 }
 
 article, aside, details, figcaption, figure,
