--- a/src/builds/desktop/components/main/headerSection/style.module.scss
+++ b/src/builds/desktop/components/main/headerSection/style.module.scss
@@ -13,13 +13,15 @@ h2, p {
   background-color: v.$dark-shade-08;
 
   > span {
-    width: 100%;
+    display: flex;
+    justify-content: center;
     padding: 60px 162px;
 
     span {
       display: flex;
       justify-content: space-between;
       align-items: center;
+      width: 100%;
       max-width: 1920px;
 
       h2 {
