--- a/src/builds/desktop/components/main/information/style.module.scss
+++ b/src/builds/desktop/components/main/information/style.module.scss
@@ -33,68 +33,72 @@ h1, h2, h3, h4, p {
   }
 
   > :last-child {
-    display: flex;
+    width: 100%;
+    border-bottom: 1px solid v.$dark-shade-15;
 
-    .SideBar {
-      width: 100%;
-      max-width: 682px;
-      border-bottom: 1px solid v.$dark-shade-15;
+    > div {
+      display: flex;
+      justify-content: center;
 
-      .ReactionBlock {
-        display: flex;
-        gap: 14px;
-        padding: 50px 162px 50px 80px;
-        border-bottom: 1px solid v.$dark-shade-15;
-      }
+      .SideBar {
+        width: 40%;
+        max-width: 842px;
 
-      > :last-child {
-        display: flex;
-        flex-direction: column;
-        gap: 50px;
-        padding: 80px 162px 80px 80px;
-
-        p, a {
-          @include m.font(v.$grey-shade-60, 18px, 400, 27px);
-        }
-
-        section {
+        .ReactionBlock {
           display: flex;
-          flex-wrap: wrap;
-          gap: 30px;
-
-          > div {
-            display: flex;
-            flex-direction: column;
-            gap: 10px;
-            width: calc(50% - 15px);
-
-            h4 {
-              @include m.font(white, 18px, 500, 27px);
-            }
-          }
+          gap: 14px;
+          padding: 50px 162px 50px 80px;
         }
 
-        > div > p {
-          margin-bottom: 16px;
-        }
-
-        ul {
-          position: sticky;
-          top: 20px;
+        > :last-child {
           display: flex;
           flex-direction: column;
-          gap: 20px;
-          padding: 20px;
-          border-radius: 12px;
-          background-color: v.$dark-shade-10;
-          list-style: disc;
+          gap: 50px;
+          padding: 80px 162px 80px 80px;
 
-          li, a {
-            color: white;
+          p, a {
+            @include m.font(v.$grey-shade-60, 18px, 400, 27px);
           }
 
-          li {
-            margin-left: 20px;
+          section {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 30px;
+
+            > div {
+              display: flex;
+              flex-direction: column;
+              gap: 10px;
+              width: calc(50% - 15px);
+
+              h4 {
+                @include m.font(white, 18px, 500, 27px);
+              }
+            }
+          }
+
+          > div > p {
+            margin-bottom: 16px;
+          }
+
+          ul {
+            position: sticky;
+            top: 20px;
+            display: flex;
+            flex-direction: column;
+            gap: 20px;
+            padding: 20px;
+            border-radius: 12px;
+            background-color: v.$dark-shade-10;
+            list-style: disc;
+
+            li, a {
+              color: white;
+            }
+
+            li {
+              margin-left: 20px;
+            }
           }
         }
       }
@@ -103,10 +107,10 @@ h1, h2, h3, h4, p {
 
   .ContentBlock {
     position: relative;
-    width: 80%;
+    width: 60%;
     max-height: 1026px;
+    max-width: 1398px;
     overflow: hidden;
-    border-bottom: 1px solid v.$dark-shade-15;
 
     &:after {
       content: '';
@@ -115,7 +119,7 @@ h1, h2, h3, h4, p {
       left: 0;
       height: 120px;
       width: calc(100% - 2px);
-      background: linear-gradient(180deg, rgba(20,20,20,0) 0%, rgba(20,20,20,1) 80%);
+      background: linear-gradient(180deg, rgba(20, 20, 20, 0) 0%, rgba(20, 20, 20, 1) 80%);
     }
 
     > div {
@@ -129,7 +133,7 @@ h1, h2, h3, h4, p {
         border-bottom: 1px solid v.$dark-shade-15;
       }
 
-      >:last-child {
+      > :last-child {
         padding: 80px 80px 110px 162px;
       }
     }
