--- a/src/builds/desktop/components/main/blogs/style.module.css
+++ b/src/builds/desktop/components/main/blogs/style.module.css
@@ -12,8 +12,14 @@
 .TabsContainer .SelectContainer {
   display: flex;
   justify-content: center;
-  gap: 20px;
   padding: 50px 162px;
+}
+.TabsContainer .SelectContainer > div {
+  display: flex;
+  justify-content: space-between;
+  gap: 20px;
+  width: 100%;
+  max-width: 1920px;
 }
 .TabsContainer .PostContainer {
   display: flex;
