--- a/src/builds/desktop/components/main/blogs/style.module.scss
+++ b/src/builds/desktop/components/main/blogs/style.module.scss
@@ -16,8 +16,15 @@
   .SelectContainer {
     display: flex;
     justify-content: center;
-    gap: 20px;
     padding: 50px 162px;
+
+    > div {
+      display: flex;
+      justify-content: space-between;
+      gap: 20px;
+      width: 100%;
+      max-width: 1920px;
+    }
   }
 
   .PostContainer {
