--- a/src/builds/desktop/components/main/features/style.module.scss
+++ b/src/builds/desktop/components/main/features/style.module.scss
@@ -8,15 +8,20 @@
 
 .BlogContainer {
   display: flex;
+  justify-content: center;
   background-color: v.$dark-shade-08;
   padding: 0 162px;
   border-bottom: 1px solid v.$dark-shade-15;
+
+  .BlogContainerLeft, .BlogContainerRight {
+    width: 50%;
+    max-width: 960px;
+  }
 
   .BlogContainerLeft {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    width: 40%;
     gap: 30px;
     padding-right: 80px;
 
@@ -44,7 +49,6 @@
     flex-wrap: wrap;
     gap: 20px;
     padding: 80px 0 80px 80px;
-    width: 60%;
 
     div {
       background-color: v.$dark-shade-10;
