--- a/src/builds/desktop/components/main/heroSection/style.module.scss
+++ b/src/builds/desktop/components/main/heroSection/style.module.scss
@@ -16,77 +16,88 @@
     .LeftContainer {
       flex-grow: 1;
       border-right: 1px solid v.$dark-shade-15;
+      width: 50%;
 
       .TextBlock {
         display: flex;
-        flex-direction: column;
-        gap: 30px;
+        justify-content: end;
         padding: 162px;
-        font-family: "Kumbh Sans", sans-serif;
 
-        :first-child {
-          color: v.$dark-shade-40;
-          font-size: 30px;
-        }
-
-        h1 {
-          @include m.font(white, 70px, 500, unset);
-        }
-
-        :last-child {
-          font-family: "Inter", sans-serif;
-          @include m.font(v.$grey-shade-50, 18px, unset, 27px);
-        }
-      }
-
-      .StatBlock {
-        display: flex;
-
-        h3 {
+        > div {
           display: flex;
-          @include m.font(white, 40px, 600, unset);
+          flex-direction: column;
+          gap: 30px;
+          font-family: "Kumbh Sans", sans-serif;
+          max-width: 798px;
 
-          p {
-            color: v.$yellow-shade-55;
+          :first-child {
+            color: v.$dark-shade-40;
+            font-size: 30px;
+          }
+
+          h1 {
+            @include m.font(white, 70px, 500, unset);
+          }
+
+          :last-child {
+            font-family: "Inter", sans-serif;
+            @include m.font(v.$grey-shade-50, 18px, unset, 27px);
           }
         }
-
-        div > p {
-          @include m.font(v.$grey-shade-60, 18px, 400, unset);
-        }
       }
 
       .StatBlock {
         display: flex;
+        justify-content: end;
+        padding-left: 162px;
         border-top: 1px solid v.$dark-shade-15;
 
-        > :nth-child(1) {
-          flex: 3;
-        }
-
-        > :nth-child(2) {
-          flex: 2.5;
-        }
-
-        > :nth-child(3) {
-          flex: 2;
-        }
-
-        .Stat {
+        > div {
           display: flex;
-          justify-content: left;
-          padding: 50px 0 50px 162px;
+          max-width: 960px;
+          width: 100%;
 
-          &:not(:first-child) {
-            padding-left: 50px;
+          > :nth-child(1) {
+            flex: 3;
           }
 
-          &:not(:last-child) {
-            border-right: 1px solid v.$dark-shade-15;
+          > :nth-child(2) {
+            flex: 2.5;
+          }
+
+          > :nth-child(3) {
+            flex: 2;
           }
 
           h3 {
-            margin-bottom: 10px;
+            display: flex;
+            @include m.font(white, 40px, 600, unset);
+
+            p {
+              color: v.$yellow-shade-55;
+            }
+          }
+
+          div > p {
+            @include m.font(v.$grey-shade-60, 18px, 400, unset);
+          }
+
+          .Stat {
+            display: flex;
+            justify-content: left;
+            padding: 50px 0 50px 0;
+
+            &:not(:first-child) {
+              padding-left: 50px;
+            }
+
+            &:not(:last-child) {
+              border-right: 1px solid v.$dark-shade-15;
+            }
+
+            h3 {
+              margin-bottom: 10px;
+            }
           }
         }
       }
@@ -95,34 +106,40 @@
     .RightContainer {
       position: relative;
       display: flex;
-      width: 65%;
-      justify-content: end;
-      flex-direction: column;
-      overflow: hidden;
-      font-family: "Inter", sans-serif;
       padding: 150px 162px 80px 80px;
-      gap: 39px;
-      color: v.$grey-shade-60;
+      width: 50%;
+      overflow: hidden;
 
-      > img {
-        position: absolute;
-        top: -7%;
-        left: -9%;
-        transform: rotate(35.39deg);
+      > div {
+        display: flex;
         width: 65%;
-        mask-image: linear-gradient(to bottom, transparent, v.$dark-shade-08 50%, transparent);
-      }
+        justify-content: end;
+        flex-direction: column;
+        font-family: "Inter", sans-serif;
+        gap: 39px;
+        color: v.$grey-shade-60;
+        max-width: 960px;
 
-      .TextBlock {
-        h3 {
-          color: white;
-          font-size: 24px;
-          margin-bottom: 30px;
+        > img {
+          position: absolute;
+          top: -7%;
+          left: -9%;
+          transform: rotate(35.39deg);
+          width: 65%;
+          mask-image: linear-gradient(to bottom, transparent, v.$dark-shade-08 50%, transparent);
         }
 
-        p {
-          font-size: 18px;
-          line-height: 27px;
+        .TextBlock {
+          h3 {
+            color: white;
+            font-size: 24px;
+            margin-bottom: 30px;
+          }
+
+          p {
+            font-size: 18px;
+            line-height: 27px;
+          }
         }
       }
     }
@@ -130,58 +147,75 @@
 
   .DownSubContainer {
     display: flex;
+    justify-content: center;
+    width: 100%;
+    padding: 0 162px;
     border-top: 1px solid v.$dark-shade-15;
 
-    .LinkContainer {
+    > div {
       display: flex;
-      justify-content: center;
-      gap: 30px;
-      flex: 1;
-      padding: 50px 0;
+      width: 100%;
+      max-width: 1920px;
 
-      &:not(:last-child) {
-        border-right: 1px solid v.$dark-shade-15;
-      }
-
-      .LinkBlock {
+      .LinkContainer {
         display: flex;
-        flex-direction: column;
+        justify-content: space-between;
         gap: 30px;
+        flex: 1;
+        padding: 50px 80px 50px 80px;
 
-        img {
-          width: 50px;
+        &:not(:last-child) {
+          border-right: 1px solid v.$dark-shade-15;
         }
 
-        div {
-          h3 {
-            @include m.font(white, 20px, 500, 30px);
+        &:first-child {
+          padding: 50px 80px 50px 0;
+        }
+
+        &:last-child {
+          padding: 50px 0 50px 80px;
+        }
+
+        .LinkBlock {
+          display: flex;
+          flex-direction: column;
+          gap: 30px;
+
+          img {
+            width: 50px;
+          }
+
+          div {
+            h3 {
+              @include m.font(white, 20px, 500, 30px);
+            }
+
+            p {
+              font-size: 18px;
+            }
           }
 
           p {
-            font-size: 18px;
+            @include m.font(v.$grey-shade-50, 20px, 400, 27px);
           }
         }
 
-        p {
-          @include m.font(v.$grey-shade-50, 20px, 400, 27px);
-        }
-      }
-
-      > :last-child {
-        display: flex;
-        align-items: center;
-
-        a {
+        > :last-child {
           display: flex;
-          justify-content: center;
-          padding: 14px;
-          border-radius: 100px;
-          color: black;
-          background-color: v.$yellow-shade-55;
-          transition: .2s ease-in-out;
+          align-items: center;
 
-          &:hover {
-            background-color: white;
+          a {
+            display: flex;
+            justify-content: center;
+            padding: 14px;
+            border-radius: 100px;
+            color: black;
+            background-color: v.$yellow-shade-55;
+            transition: .2s ease-in-out;
+
+            &:hover {
+              background-color: white;
+            }
           }
         }
       }
