--- a/src/builds/desktop/components/main/resources/style.module.scss
+++ b/src/builds/desktop/components/main/resources/style.module.scss
@@ -8,6 +8,7 @@ h2, h3, p {
 
 .ResourceContainer {
   display: flex;
+  justify-content: center;
   background-color: v.$dark-shade-08;
   padding: 0 162px;
   border-bottom: 1px solid v.$dark-shade-15;
@@ -25,7 +26,8 @@ h2, h3, p {
   .ResourceContainerLeft {
     display: flex;
     align-items: center;
-    width: 40%;
+    width: 50%;
+    max-width: 960px;
     border-right: 1px solid v.$dark-shade-15;
 
     > div {
@@ -71,7 +73,8 @@ h2, h3, p {
     gap: 30px;
     flex-direction: column;
     padding: 80px 0 80px 80px;
-    width: 60%;
+    width: 50%;
+    max-width: 960px;
 
     > span {
       display: flex;
