--- a/src/builds/desktop/components/main/topPodcasts/style.module.css
+++ b/src/builds/desktop/components/main/topPodcasts/style.module.css
@@ -3,69 +3,75 @@ h2, h3, p {
   font-family: "Inter", sans-serif;
 }
 
-.ResourceContainer {
+.PodcastContainer {
   display: flex;
   justify-content: center;
   background-color: #141414;
   padding: 0 162px;
   border-bottom: 1px solid #262626;
 }
-.ResourceContainer .TextBlock p {
+.PodcastContainer .TextBlock p {
   color: #98989A;
   font-size: 18px;
   font-weight: 400;
   line-height: 27px;
 }
-.ResourceContainer .TextBlock h2 {
+.PodcastContainer .TextBlock h2 {
   color: white;
   font-size: 20px;
   font-weight: 600;
   line-height: 30px;
 }
-.ResourceContainer .ResourceContainerLeft {
+.PodcastContainer .PodcastContainerLeft {
   display: flex;
   align-items: center;
   width: 40%;
   max-width: 768px;
   border-right: 1px solid #262626;
 }
-.ResourceContainer .ResourceContainerLeft > div {
+.PodcastContainer .PodcastContainerLeft > div {
   display: flex;
   flex-direction: column;
   gap: 50px;
   padding-right: 80px;
+  width: 100%;
 }
-.ResourceContainer .ResourceContainerLeft > div > img {
+.PodcastContainer .PodcastContainerLeft > div > img {
   width: 80px;
 }
-.ResourceContainer .ResourceContainerLeft > div h1 {
+.PodcastContainer .PodcastContainerLeft > div > div {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 16px;
+}
+.PodcastContainer .PodcastContainerLeft > div h1 {
   font-family: "Kumbh Sans", sans-serif;
   color: white;
   font-size: 40px;
   font-weight: 600;
   line-height: 60px;
 }
-.ResourceContainer .ResourceContainerLeft > div p {
+.PodcastContainer .PodcastContainerLeft > div p {
   color: #98989A;
   font-size: 20px;
   font-weight: 400;
   line-height: 30px;
 }
-.ResourceContainer .ResourceContainerLeft > div button {
+.PodcastContainer .PodcastContainerLeft > div button {
   justify-content: center;
 }
-.ResourceContainer .ResourceContainerLeft > div > :last-child {
+.PodcastContainer .PodcastContainerLeft > div > :last-child > div {
   display: flex;
-}
-.ResourceContainer .ResourceContainerLeft > div > :last-child > div {
-  display: flex;
+  justify-content: space-between;
   gap: 50px;
   background-color: #1A1A1A;
   border: 1px solid #262626;
   border-radius: 13px;
   padding: 30px;
+  width: 100%;
 }
-.ResourceContainer .ResourceContainerRight {
+.PodcastContainer .PodcastContainerRight {
   display: flex;
   gap: 30px;
   flex-direction: column;
@@ -73,41 +79,41 @@ h2, h3, p {
   width: 60%;
   max-width: 1152px;
 }
-.ResourceContainer .ResourceContainerRight > span {
+.PodcastContainer .PodcastContainerRight > span {
   display: flex;
   align-items: center;
   gap: 50px;
 }
-.ResourceContainer .ResourceContainerRight > span h2 {
+.PodcastContainer .PodcastContainerRight > span h2 {
   text-wrap: nowrap;
   color: white;
   font-size: 24px;
   font-weight: 600;
   line-height: 36px;
 }
-.ResourceContainer .ResourceContainerRight > span p {
+.PodcastContainer .PodcastContainerRight > span p {
   color: #98989A;
   font-size: 18px;
   font-weight: 400;
   line-height: 27px;
 }
-.ResourceContainer .ResourceContainerRight > :last-child {
+.PodcastContainer .PodcastContainerRight > :last-child {
   display: flex;
   flex-wrap: wrap;
   gap: 20px;
 }
-.ResourceContainer .ResourceContainerRight > :last-child .DownloadBlock {
+.PodcastContainer .PodcastContainerRight > :last-child .DownloadBlock {
   display: flex;
   justify-content: space-between;
 }
-.ResourceContainer .ResourceContainerRight > :last-child > div {
+.PodcastContainer .PodcastContainerRight > :last-child > div {
   background-color: #1A1A1A;
   border: 1px solid #262626;
   padding: 30px;
   border-radius: 13px;
   flex-grow: 1;
 }
-.ResourceContainer .ResourceContainerRight > :last-child > :first-child {
+.PodcastContainer .PodcastContainerRight > :last-child > :first-child {
   flex-grow: 0;
 }
 
