--- a/src/builds/desktop/components/main/videos/player/style.module.scss
+++ b/src/builds/desktop/components/main/videos/player/style.module.scss
@@ -18,6 +18,7 @@
     -webkit-box-shadow: 0 -64px 40px -22px rgba(20, 20, 20, 1) inset;
     -moz-box-shadow: 0 -64px 40px -22px rgba(20, 20, 20, 1) inset;
     border-radius: 12px;
+    opacity: 0;
 
     svg {
       cursor: pointer;
@@ -31,5 +32,12 @@
       font-family: "Inter", sans-serif;
       @include m.font(v.$grey-shade-50, 18px, 400, 27px);
     }
+  }
+
+  .Short svg {
+    position: relative;
+    left: 50%;
+    margin-bottom: 15%;
+    transform: translate(-50%);
   }
 }
