--- a/src/builds/desktop/components/main/testimonials/style.module.css
+++ b/src/builds/desktop/components/main/testimonials/style.module.css
@@ -1,69 +1,40 @@
 @import url("../../../../../utils/styles/base/_normalize.scss");
-* {
+h2, h3, p {
   font-family: "Inter", sans-serif;
 }
 
-.TestimonialsContainer {
-  display: flex;
-  justify-content: center;
-  padding: 0 162px;
-  border-bottom: 1px solid #262626;
-  background-color: #141414;
-}
-.TestimonialsContainer > div {
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  width: 100%;
-  max-width: 1920px;
-}
-.TestimonialsContainer > div > div {
-  width: 33.3333333%;
-}
-.TestimonialsContainer > div > div:not(:first-child) {
-  border-left: 1px solid #262626;
-}
-.TestimonialsContainer > div > :nth-child(1) {
-  padding: 80px 50px 80px 0;
-}
-.TestimonialsContainer > div > :nth-child(2) {
-  padding: 80px 50px;
-}
-.TestimonialsContainer > div > :nth-child(3) {
-  padding: 80px 0 80px 50px;
-}
-.TestimonialsContainer > div .TestimonialsBlock {
+.TestimonialsBlock {
   display: flex;
 }
-.TestimonialsContainer > div .TestimonialsBlock > div {
+.TestimonialsBlock > div {
   display: flex;
   flex-direction: column;
   gap: 60px;
   width: 100%;
   max-width: 640px;
 }
-.TestimonialsContainer > div .TestimonialsBlock > div > :first-child {
+.TestimonialsBlock > div > :first-child {
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 12px;
 }
-.TestimonialsContainer > div .TestimonialsBlock > div > :first-child img {
+.TestimonialsBlock > div > :first-child img {
   width: 60px;
 }
-.TestimonialsContainer > div .TestimonialsBlock > div > :first-child h2 {
+.TestimonialsBlock > div > :first-child h2 {
   color: white;
   font-size: 20px;
   font-weight: 500;
   line-height: 30px;
 }
-.TestimonialsContainer > div .TestimonialsBlock > div > :first-child p {
+.TestimonialsBlock > div > :first-child p {
   color: #666666;
   font-size: 18px;
   font-weight: 400;
   line-height: 27px;
 }
-.TestimonialsContainer > div .TestimonialsBlock > div > :last-child {
+.TestimonialsBlock > div > :last-child {
   position: relative;
   text-align: center;
   padding: 10px 30px 30px 30px;
@@ -71,13 +42,13 @@
   border: 1px solid #262626;
   border-radius: 12px;
 }
-.TestimonialsContainer > div .TestimonialsBlock > div > :last-child > :first-child {
+.TestimonialsBlock > div > :last-child > :first-child {
   position: relative;
   top: -35px;
   display: flex;
   justify-content: center;
 }
-.TestimonialsContainer > div .TestimonialsBlock > div > :last-child p {
+.TestimonialsBlock > div > :last-child p {
   color: white;
   font-size: 18px;
   font-weight: 400;
