--- a/src/builds/desktop/components/main/heroSection/style.module.scss
+++ b/src/builds/desktop/components/main/heroSection/style.module.scss
@@ -2,7 +2,7 @@
 @use "../../../../../utils/styles/base/_mixin.scss" as m;
 @import url("../../../../../utils/styles/base/_normalize.scss");
 
-* {
+h2, h3, p {
   font-family: "Inter", sans-serif;
 }
 
@@ -46,7 +46,7 @@
         }
       }
 
-      .StatBlock {
+      .StatBlockContainer {
         display: flex;
         justify-content: end;
         padding-left: 162px;
@@ -69,21 +69,9 @@
             flex: 2;
           }
 
-          h3 {
+          > div {
             display: flex;
-            @include m.font(white, 40px, 600, unset);
-
-            p {
-              color: v.$yellow-shade-55;
-            }
-          }
-
-          div > p {
-            @include m.font(v.$grey-shade-60, 18px, 400, unset);
-          }
-
-          .Stat {
-            display: flex;
+            flex-direction: column;
             justify-content: left;
             padding: 50px 0 50px 0;
 
@@ -93,10 +81,6 @@
 
             &:not(:last-child) {
               border-right: 1px solid v.$dark-shade-15;
-            }
-
-            h3 {
-              margin-bottom: 10px;
             }
           }
         }
