--- a/src/builds/desktop/components/buttons/button.module.css
+++ b/src/builds/desktop/components/buttons/button.module.css
@@ -13,6 +13,7 @@
   background-color: #141414;
   border: 1px solid #333333;
   color: #98989A;
+  white-space: nowrap;
   transition: 0.2s ease-in-out;
 }
 .Button:hover {
