--- a/src/builds/desktop/components/main/resources/homeResources/style.module.scss
+++ b/src/builds/desktop/components/main/resources/homeResources/style.module.scss
@@ -1,21 +1,14 @@
-@use '../../../../../utils/styles/base/_variables' as v;
-@use "../../../../../utils/styles/base/_mixin.scss" as m;
-@import url("../../../../../utils/styles/base/_normalize.scss");
+@use '../../../../../../utils/styles/base/_variables' as v;
+@use "../../../../../../utils/styles/base/_mixin.scss" as m;
+@import url("../../../../../../utils/styles/base/_normalize.scss");
 
 h2, h3, p {
   font-family: "Inter", sans-serif;
 }
 
 .TextBlock {
-  background-color: v.$dark-shade-10;
-  border: 1px solid v.$dark-shade-15;
-  padding: 30px;
-  border-radius: 13px;
-  width: 33.333333%;
-
   p {
     @include m.font(v.$grey-shade-60, 18px, 400, 27px);
-    margin-bottom: 4px;
   }
 
   h2 {
@@ -42,14 +35,30 @@ h2, h3, p {
     p {
       @include m.font(v.$grey-shade-60, 20px, 400, 30px);
     }
+
+    button {
+      justify-content: center;
+    }
+
+    > :last-child {
+      display: flex;
+
+      > div {
+        display: flex;
+        gap: 50px;
+        background-color: v.$dark-shade-10;
+        border: 1px solid v.$dark-shade-15;
+        border-radius: 13px;
+        padding: 30px;
+      }
+    }
   }
 }
 
 .ResourceContainerRight {
-  .ResourceTitleBlock {
+  > span {
     display: flex;
     align-items: center;
-    justify-content: space-between;
     gap: 50px;
 
     h2 {
@@ -64,37 +73,24 @@ h2, h3, p {
 
   > :last-child {
     display: flex;
-    gap: 20px;
-  }
-}
-
-.ResourceContainerMore {
-  display: flex;
-  flex-direction: column;
-  gap: 30px;
-
-  h2 {
-    @include m.font(white, 22px, 600, 33px);
-  }
-
-  p {
-    @include m.font(v.$grey-shade-60, 18px, 400, 27px);
-  }
-
-  img {
-    max-height: 290px;
-    width: 100%;
-    object-fit: cover;
-    border-radius: 12px;
-  }
-
-  span {
-    display: flex;
+    flex-wrap: wrap;
     gap: 20px;
 
-    button {
-      width: 50%;
-      padding: 18px 24px;
+    .DownloadBlock {
+      display: flex;
+      justify-content: space-between;
+    }
+
+    > div {
+      background-color: v.$dark-shade-10;
+      border: 1px solid v.$dark-shade-15;
+      padding: 30px;
+      border-radius: 13px;
+      flex-grow: 1;
+    }
+
+    > :first-child {
+      flex-grow: 0;
     }
   }
 }
