--- a/src/builds/desktop/components/main/faq/style.module.css
+++ b/src/builds/desktop/components/main/faq/style.module.css
@@ -19,108 +19,11 @@ h2, h3, p {
   font-weight: 600;
   line-height: 60px;
 }
-
-.ResourceContainerRight form {
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  gap: 50px;
-}
-.ResourceContainerRight form > div {
-  display: flex;
-  gap: 50px;
-  width: 100%;
-}
-.ResourceContainerRight form .InputBlock {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 16px;
-  width: 50%;
-}
-.ResourceContainerRight form .InputBlock label {
-  color: white;
-  font-size: 18px;
-  font-weight: 500;
-  line-height: 27px;
-}
-.ResourceContainerRight form .InputBlock input, .ResourceContainerRight form .InputBlock textarea {
-  padding: 20px;
-  border-radius: 8px;
-  border: 1px solid #262626;
-  background-color: #1A1A1A;
-  width: 100%;
-  height: auto;
-  transition: 0.2s all ease-in-out;
-  color: #666666;
+.ResourceContainerLeft > div p {
+  color: #98989A;
   font-size: 18px;
   font-weight: 400;
   line-height: 27px;
-}
-.ResourceContainerRight form .InputBlock input:focus, .ResourceContainerRight form .InputBlock textarea:focus {
-  color: white;
-  border-color: #666666;
-}
-.ResourceContainerRight form .InputBlock textarea {
-  word-wrap: break-word;
-}
-.ResourceContainerRight form .InputBlock textarea::-webkit-scrollbar {
-  width: 5px;
-}
-.ResourceContainerRight form .InputBlock textarea::-webkit-scrollbar-thumb {
-  background: #666666;
-  border-radius: 5px;
-}
-.ResourceContainerRight form .WideBlock > div, .ResourceContainerRight form .WideBlock {
-  width: 100%;
-}
-.ResourceContainerRight form > :last-child > div {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-.ResourceContainerRight form > :last-child > div span {
-  display: flex;
-  gap: 10px;
-  align-items: center;
-}
-.ResourceContainerRight form > :last-child > div span input {
-  position: relative;
-  width: 28px;
-  height: 28px;
-  border-radius: 4px;
-  border: 1px solid #262626;
-  background-color: #1A1A1A;
-  cursor: pointer;
-}
-.ResourceContainerRight form > :last-child > div span input:checked {
-  background-color: #FFD11A;
-}
-.ResourceContainerRight form > :last-child > div span input:after {
-  content: "";
-  position: absolute;
-  left: 10px;
-  top: 6px;
-  width: 5px;
-  height: 10px;
-  border: solid #1A1A1A;
-  border-width: 0 3px 3px 0;
-  transform: rotate(45deg);
-}
-.ResourceContainerRight form > :last-child > div span label {
-  color: white;
-  font-size: 18px;
-  font-weight: 400;
-  line-height: 27px;
-}
-.ResourceContainerRight form > :last-child button {
-  font-weight: 500;
-  padding: 18px 46px;
-  border-radius: 8px;
-  background-color: #FFF5CC;
-  color: #141414;
-  font-size: 18px;
-  font-weight: 500;
-  line-height: 24px;
 }
 
 /*# sourceMappingURL=style.module.css.map */
